--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.1
-loader_version=0.11.6
+minecraft_version=21w38a
+yarn_mappings=21w38a+build.4
+loader_version=0.11.7
+
+
 
 # Mod Properties
 mod_version = 0.0.11
@@ -14,4 +16,4 @@ archives_base_name = logical_zoom
 
 # Dependencies
 # check these on https://modmuss50.me/fabric.html
-fabric_version=0.36.1+1.17
+fabric_version=0.40.4+1.18
